--- a/src/components/Feedbackoptions/FeedbackOptions.module.css
+++ b/src/components/Feedbackoptions/FeedbackOptions.module.css
@@ -3,6 +3,7 @@
   font-size: 20px;
   border-radius: 4px;
   cursor: pointer;
+  margin-left: 10px;
 }
 .btn:not(:last-child) {
   margin-right: 30px;
